--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   <div class="container text-center">
+    <div class="box">
+    </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="scripts.js"></script>
