Add h1 with id of city and text of location

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <div class="container text-center">
     <div class="box">
+      <h1 id="city">Location</h1>
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
