--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div class="container text-center">
     <div class="box">
       <h1 id="city">Location</h1>
+      <div id="iconBtn"></div>
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
