Add button with id of fahrenheit, class of btn, and title to describe conversion

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="box">
       <h1 id="city">Location</h1>
       <div id="iconBtn"></div>
+      <button class="btn" title="Convert between Fahrenheit and Celsius" id="fahrenheit">Temperature</button>
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
