--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1 id="city">Location</h1>
       <div id="iconBtn"></div>
       <button class="btn" title="Convert between Fahrenheit and Celsius" id="fahrenheit">Temperature</button>
+      <h1 id="weatherDescription">Weather Description</h1>
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
