--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="box">
       <h1 id="city">Location</h1>
       <div id="iconBtn"></div>
-      <button class="btn" title="Convert between Fahrenheit and Celsius" id="fahrenheit">Temperature</button>
+      <button title="Convert between Fahrenheit and Celsius" id="fahrenheit">Temperature</button>
       <h1 id="weatherDescription">Weather Description</h1>
     </div>
   </div>
